web-infras/parser/tests/fixtures/esprima/statement/if/invalid-function-declaration4/output.txt
[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block. (1,25)
1|"use strict"; if (true) function f(){} else function g(){}
 |                       ^
[SyntaxError]: Missing semicolon or line terminator. (1,40)
1|"use strict"; if (true) function f(){} else function g(){}
 |                                      ^
[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block. (1,45)
1|"use strict"; if (true) function f(){} else function g(){}
 |                                           ^
